Updated HTML, CSS, and added assets

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section id="home" class="home">
         <div class="profile-container">
             <div class="profile-photo fade-in">
-                <img src="assets/profile.jpg" alt="Kavindu Rajapaksha">
+                <img src="assets/my photo.png" alt="Kavindu Rajapaksha">
             </div>
             <h1 class="fade-in">Kavindu Rajapaksha</h1>
             <h2 class="fade-in">Computer Science Undergraduate</h2>
@@ -42,7 +42,7 @@
         <h2 class="section-title">About Me</h2>
         <div class="about-content">
             <div class="about-photo">
-                <img src="assets/profile-small.jpg" alt="Kavindu Rajapaksha">
+                <img src="assets/about me.jpg" alt="Kavindu Rajapaksha">
             </div>
             <div class="about-text">
                 <p>Hi there! I'm Kavindu Rajapaksha, a passionate Computer Science undergraduate with a keen interest in software development and problem-solving. I love creating innovative solutions and learning new technologies.</p>
