about me page done

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
                 <img src="assets/about me.jpg" alt="Kavindu Rajapaksha">
             </div>
             <div class="about-text">
-                <p>Hi there! I'm Kavindu Rajapaksha, a passionate Computer Science undergraduate with a keen interest in software development and problem-solving. I love creating innovative solutions and learning new technologies.</p>
+                <p>Hi, I'm Kavindu Subhash Rajapaksha, a Computer Science undergraduate at the Informatics Institute of Technology (IIT), Sri Lanka, affiliated with the University of Westminster, UK. I am passionate about web development and DevOps and enjoy exploring how modern technologies can be used to build efficient, scalable, and user-friendly applications.<br>
+
+I’m currently building my skills in front-end development, cloud technologies, and automation tools while continuously learning new frameworks and best practices to stay ahead in the tech world. My goal is to become a full-stack developer and eventually specialize in DevOps engineering and cloud infrastructure.</p>
                 
                 <div class="info-sections">
                     <div class="info-box experience">
