--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
             <div class="profile-photo fade-in">
                 <img src="assets/my photo.png" alt="Kavindu Rajapaksha">
             </div>
-            <h1 class="fade-in">Kavindu Rajapaksha</h1>
+            <h1 class="fade-in">Hello! I'm Kavindu Rajapaksha</h1>
             <h2 class="fade-in">Computer Science Undergraduate</h2>
+            <p class="quote fade-in">"Code it, build it, ship it – full-stack development made simple."</p>
             <div class="cta-buttons">
                 <a href="#contact" class="btn primary-btn">Contact Me</a>
                 <a href="#" class="btn secondary-btn" download>Download CV</a>
