add linkedin and github view buttons

--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
             <h1 class="fade-in">Hello! I'm Kavindu Rajapaksha</h1>
             <h2 class="fade-in">Computer Science Undergraduate</h2>
             <p class="quote fade-in">"Code it, build it, ship it – full-stack development made simple."</p>
+            <div class="social-buttons fade-in">
+                <a href="https://linkedin.com/in/yourprofile" target="_blank" class="btn social-btn linkedin-btn">
+                    <i class="fab fa-linkedin"></i> View LinkedIn
+                </a>
+                <a href="https://github.com/yourusername" target="_blank" class="btn social-btn github-btn">
+                    <i class="fab fa-github"></i> View GitHub
+                </a>
+            </div>
             <div class="cta-buttons">
                 <a href="#contact" class="btn primary-btn">Contact Me</a>
                 <a href="#" class="btn secondary-btn" download>Download CV</a>
