about me section updated

--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@
       <div class="about-right">
         <div class="about-description">
           <p>
-            I'm a first-year Computer Science undergraduate passionate about front-end development, 
-            UI/UX design, and building interactive web experiences. 
-            I enjoy learning new technologies and working on creative projects.
+            I am a second-year Computer Science undergraduate at IIT, passionate about web development and software engineering. I enjoy creating user-friendly applications, exploring modern technologies, and continuously improving my skills to become a full-stack developer.
           </p>
         </div>
         <div class="about-tabs">
@@ -82,35 +80,45 @@
             <div class="tab-pane active" id="education">
               <ul class="timeline">
                 <li>
-                  <h4>BSc in Computer Science</h4>
-                  <p>University Name</p>
-                  <span>2023 - Present</span>
+                  <h4>BSc (Hons) Computer Science</h4>
+                  <p>IIT (University of Westminster)</p>
+                  <span>2024 - Present</span>
                 </li>
                 <li>
-                  <h4>High School Diploma</h4>
-                  <p>School Name</p>
-                  <span>2018 - 2022</span>
+                  <h4>Foundation Certificate in Higher Education – IT</h4>
+                  <p>IIT - Awarded with Merit Pass</p>
+                  <span>2023-2024</span>
                 </li>
               </ul>
             </div>
             <div class="tab-pane" id="skills">
               <div class="skills-grid">
                 <div class="skill-category">
-                  <h4>Frontend</h4>
+                  <h4>Languages</h4>
                   <ul>
-                    <li>HTML5 & CSS3</li>
+                    <li>Python</li>
+                    <li>Java</li>
+                    <li>C</li>
+                    <li>HTML & CSS</li>
                     <li>JavaScript</li>
-                    <li>React.js</li>
-                    <li>Responsive Design</li>
                   </ul>
                 </div>
                 <div class="skill-category">
-                  <h4>Tools & Others</h4>
+                  <h4>Frameworks</h4>
                   <ul>
-                    <li>Git & GitHub</li>
-                    <li>VS Code</li>
-                    <li>Figma</li>
-                    <li>Problem Solving</li>
+                    <li>Spring</li>
+                    <li>Spring Boot</li>
+                    <li>Angular</li>
+                    <li>React</li>
+                  </ul>
+                </div>
+                <div class="skill-category">
+                  <h4>Concepts</h4>
+                  <ul>
+                    <li>REST API</li>
+                    <li>Object-Oriented Programming</li>
+                    <li>CRUD Operations</li>
+                    <li>Responsive Design</li>
                   </ul>
                 </div>
               </div>
@@ -118,12 +126,12 @@
             <div class="tab-pane" id="experience">
               <ul class="timeline">
                 <li>
-                  <h4>Web Development Intern</h4>
-                  <p>Company Name</p>
-                  <span>June 2023 - August 2023</span>
+                  <h4>Marketing Intern</h4>
+                  <p>SLIIT City Uni Campus</p>
+                  <span>May 2025 - October 2026</span>
                   <ul>
-                    <li>Developed responsive web applications</li>
-                    <li>Collaborated with senior developers</li>
+                    <li>Supporting event coordination and student engagement activities.</li>
+                    <li>Assisting in digital marketing campaigns and social media content.</li>
                   </ul>
                 </li>
                 <!-- Add more experience items as needed -->
@@ -133,6 +141,31 @@
         </div>
       </div>
     </div>
+    <div class="tools-section">
+          <h3>Tools I Frequently Use</h3>
+          <div class="tools-grid">
+            <div class="tool-item">
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" alt="VS Code">
+              <span>VS Code</span>
+            </div>
+            <div class="tool-item">
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/intellij/intellij-original.svg" alt="IntelliJ">
+              <span>IntelliJ</span>
+            </div>
+            <div class="tool-item">
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub">
+              <span>GitHub</span>
+            </div>
+            <div class="tool-item">
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/figma/figma-original.svg" alt="Figma">
+              <span>Figma</span>
+            </div>
+            <div class="tool-item">
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" alt="MySQL Workbench">
+              <span>MySQL Workbench</span>
+            </div>
+          </div>
+        </div>
   </section>
 
   <!-- Projects Section -->
