project section updated

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <div class="projects-grid">
       <div class="project-card">
         <div class="project-image">
-          <img src="project1.jpg" alt="Life Pulse Project">
+          <img src="assets/lifepulse.jpg" alt="Life Pulse Project">
         </div>
         <div class="project-content">
           <h3>Life Pulse</h3>
@@ -187,7 +187,7 @@
       </div>
       <div class="project-card">
         <div class="project-image">
-          <img src="project2.jpg" alt="Pet Care App">
+          <img src="assets/petcare ui.jpg" alt="Pet Care App">
         </div>
         <div class="project-content">
           <h3>Pet Care App (UI/UX)</h3>
@@ -200,11 +200,11 @@
       </div>
       <div class="project-card">
         <div class="project-image">
-          <img src="project1.jpg" alt="Life Pulse Project">
+          <img src="assets/library system.jpg" alt="Life Pulse Project">
         </div>
         <div class="project-content">
-          <h3>Life Pulse</h3>
-          <p>A health tracking web project.</p>
+          <h3>Library Management System</h3>
+          <p>A web application for managing library resources.</p>
           <a href="#" class="project-link">
             View Project
             <i class="fas fa-arrow-right"></i>
