projects part updated

--- a/index.html
+++ b/index.html
@@ -213,11 +213,11 @@
       </div>
       <div class="project-card">
         <div class="project-image">
-          <img src="project3.jpg" alt="Admin Dashboard">
+          <img src="assets/portfolio.png" alt="Admin Dashboard">
         </div>
         <div class="project-content">
-          <h3>Admin Dashboard UI</h3>
-          <p>Responsive dashboard design.</p>
+          <h3>My Personal Portfolio Website</h3>
+          <p>A showcase of my work and skills.</p>
           <a href="#" class="project-link">
             View Project
             <i class="fas fa-arrow-right"></i>
