project links added

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <div class="project-content">
           <h3>Life Pulse</h3>
           <p>A health tracking web project.</p>
-          <a href="#" class="project-link">
+          <a href="https://stunning-basbousa-fad135.netlify.app/home" class="project-link">
             View Project
             <i class="fas fa-arrow-right"></i>
           </a>
@@ -205,7 +205,7 @@
         <div class="project-content">
           <h3>Library Management System</h3>
           <p>A web application for managing library resources.</p>
-          <a href="#" class="project-link">
+          <a href="https://github.com/kavindusubhash28/library-management-system" class="project-link">
             View Project
             <i class="fas fa-arrow-right"></i>
           </a>
@@ -218,7 +218,7 @@
         <div class="project-content">
           <h3>My Personal Portfolio Website</h3>
           <p>A showcase of my work and skills.</p>
-          <a href="#" class="project-link">
+          <a href="https://github.com/kavindusubhash28/my-latest-portfolio" class="project-link">
             View Project
             <i class="fas fa-arrow-right"></i>
           </a>
