--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="content">
         <h1>Hi, I'm Kavindu Rajapaksha</h1>
         <p>Aspiring Web Developer | Passionate About Design & Code</p>
-        <a href="your-cv.pdf" class="btn" download>
+        <a href="assets/Kavindu Rajapaksha.pdf" class="btn" download>
           <i class="fas fa-download"></i>
           Download CV
         </a>
