social media links added

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
           Download CV
         </a>
         <div class="social-links">
-          <a href="#" class="social-icon linkedin">
+          <a href="https://www.linkedin.com/in/kavindu-rajapaksha-982943293/" class="social-icon linkedin">
             <i class="fab fa-linkedin"></i>
           </a>
-          <a href="#" class="social-icon github">
+          <a href="https://github.com/kavindusubhash28" class="social-icon github">
             <i class="fab fa-github"></i>
           </a>
           <a href="#" class="social-icon instagram">
