--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
           <div class="contact-details">
             <h4>LinkedIn</h4>
             <p>Let's connect professionally</p>
-            <a href="#" target="_blank" class="contact-link-btn">Connect</a>
+            <a href="https://www.linkedin.com/in/kavindu-rajapaksha-982943293/" target="_blank" class="contact-link-btn">Connect</a>
           </div>
         </div>
         
