instagram link added

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <a href="https://github.com/kavindusubhash28" class="social-icon github">
             <i class="fab fa-github"></i>
           </a>
-          <a href="#" class="social-icon instagram">
+          <a href="https://www.instagram.com/kavindu__subhash" class="social-icon instagram">
             <i class="fab fa-instagram"></i>
           </a>
           <a href="#" class="social-icon facebook">
