ui ux project added

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <div class="project-content">
           <h3>Pet Care App (UI/UX)</h3>
           <p>Mobile app design in Figma.</p>
-          <a href="#" class="project-link">
+          <a href="https://github.com/kavindusubhash28/petcare-genie-ui" class="project-link">
             View Project
             <i class="fas fa-arrow-right"></i>
           </a>
